sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i <-0 to getNombreValeurs-1){
    var j = i+1
    while (plusPetit(i,j)==false){
      echange(i,j)
      i=j
      j=j+1
    }
  }
}